--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
   shared_preferences: ^2.0.8
+  adaptive_theme: ^3.2.0
 
 dev_dependencies:
   flutter_test:
